--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,22 +12,15 @@ jobs:
       - name: Checkout code from GitHub
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-      - name: Install SSH Key for iFastNet
-        uses: shimataro/ssh-key-action@v2 # Using shimataro/ssh-key-action
-        with:
-          key: ${{ secrets.IFASTNET_PASS }}
-          name: id_ifastnet_action # Optional: name of the key file once created on the runner
-          #known_hosts: ${{ secrets.IFASTNET_KNOWN_HOSTS }} # Store your server's host key here as a secret
-          passphrase: ${{ secrets.IFASTNET_PASS }} # Use the passphrase secret
+          fetch-depth: 0 # Fetch all history so we can push correctly
 
-      # The ssh-keyscan step for known_hosts might still be useful if you don't want to manage
-      # the full known_hosts entry as a secret, but shimataro/ssh-key-action can use a direct entry.
-      # If you don't use the 'known_hosts' input in the action above, keep a step like this:
-      # - name: Add iFastNet to known_hosts (alternative)
-         run: |
-           mkdir -p ~/.ssh
-           ssh-keyscan -p 27015 kreft.us >> ~/.ssh/known_hosts
+      - name: Install SSH Key for iFastNet
+        uses: shimataro/ssh-key-action@v2.7.0 # Using a specific version is good practice
+        with:
+          key: ${{ secrets.IFASTNET }}                # Updated secret name for private key
+          passphrase: ${{ secrets.IFASTNET_PASS }}       # Updated secret name for passphrase
+          known_hosts: ${{ secrets.IFASTNET_KNOWN_HOSTS }} # Using secret for known_hosts
+          # name: id_ifastnet_action # Optional: name of the key file once created on the runner
 
       - name: Configure Git User
         run: |
@@ -36,8 +29,13 @@ jobs:
 
       - name: Add iFastNet as a remote
         run: |
+          # Remove remote if it already exists to avoid errors on re-runs
+          git remote remove ifastnet || true
           git remote add ifastnet ssh://kreftus@kreft.us:27015/home/kreftus/gitcode
 
       - name: Push to iFastNet
         run: |
           git push ifastnet main --force
+          # Using --force might be necessary if the histories can diverge
+          # or if the iFastNet repo is non-bare and its HEAD needs to be overwritten.
+          # Use with caution: ensures iFastNet repo matches the GitHub repo state.
