--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy to iFastNet via Git Push (with Passphrase via Expect)
+name: Deploy to iFastNet via Git Push (with Passphrase via Expect - Debug)
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
       - name: Install expect
         run: sudo apt-get update && sudo apt-get install -y expect
 
-- name: Setup SSH Agent and Add Key with Passphrase
+      - name: Setup SSH Agent and Add Key with Passphrase
         env:
           SSH_PRIVATE_KEY_CONTENT: ${{ secrets.IFASTNET }}
           SSH_KEY_PASSPHRASE: ${{ secrets.IFASTNET_PASS }}
@@ -35,76 +35,84 @@ jobs:
 
           if [ ! -f "$KEY_FILE_PATH" ]; then
             echo "ERROR: Private key file was not created at $KEY_FILE_PATH"
+            ls -la "$SSH_DIR" # List directory contents for debugging
             exit 1
           fi
           echo "Private key file created successfully."
           
-          # Optional: Output first few lines of the key for format verification (BE CAREFUL - this might expose parts of the key in logs)
-          # echo "First few lines of the key file:"
+          # DEBUG: Uncomment to see parts of the key. CAUTION: Exposes key data in logs. Remove after debugging.
+          # echo "First 3 lines of the key file:"
           # head -n 3 "$KEY_FILE_PATH"
-          # echo "Last few lines of the key file:"
+          # echo "Last 3 lines of the key file:"
           # tail -n 3 "$KEY_FILE_PATH"
 
           echo "Attempting to add key to ssh-agent with expect..."
-          # Ensure SSH_KEY_PASSPHRASE is not empty if it's expected
+          # Ensure SSH_KEY_PASSPHRASE is not empty if it's expected for an encrypted key
           if [ -z "$SSH_KEY_PASSPHRASE" ]; then
-            echo "Error: SSH_KEY_PASSPHRASE environment variable is empty."
-            # Decide if this should be a fatal error if passphrase is truly required
-            # exit 1 
+            echo "Warning: SSH_KEY_PASSPHRASE environment variable is empty. Assuming key is not passphrase protected or passphrase is not needed by ssh-add here."
+            # If you are sure the key IS passphrase protected, you might want to 'exit 1' here
+            # if the SSH_KEY_PASSPHRASE secret is mandatory.
           fi
 
+          # Prepare the expect script content
           EXPECT_SCRIPT=$(cat <<EOF
           set timeout 10
+          # For debugging expect itself
+          # exp_internal 1
+
           spawn ssh-add "$KEY_FILE_PATH"
           expect {
             "Enter passphrase for $KEY_FILE_PATH:" {
               send "$SSH_KEY_PASSPHRASE\r"
-              # After sending passphrase, wait for ssh-add to either succeed or ask again (bad passphrase)
+              # After sending passphrase, expect either success (eof) or failure
               expect {
                 "Bad passphrase, try again for $KEY_FILE_PATH:" {
-                  puts "Error: Bad passphrase provided to ssh-add."
+                  puts "ERROR_EXPECT: Bad passphrase supplied to ssh-add."
                   exit 1
                 }
                 eof {
-                  # ssh-add finished, hopefully successfully
-                  puts "ssh-add finished after passphrase."
+                  # This is the ideal path after a correct passphrase
+                  puts "EXPECT_DEBUG: ssh-add finished after passphrase was sent."
                 }
                 timeout {
-                  puts "Timeout after sending passphrase."
+                  puts "ERROR_EXPECT: Timeout after sending passphrase, ssh-add may have hung or passphrase was incorrect."
                   exit 1
                 }
               }
             }
             "Identity added: $KEY_FILE_PATH" {
-               # This means the key was added, possibly it had no passphrase or agent remembered it
-               puts "Identity added (potentially no passphrase was needed or agent handled it)."
+              # This means ssh-add successfully added the key, possibly without needing the passphrase prompt
+              # (e.g., if the key wasn't actually encrypted, or agent handled it differently)
+              puts "EXPECT_DEBUG: ssh-add reported 'Identity added' (key might be unencrypted or agent handled passphrase)."
             }
             eof {
-              # ssh-add finished without asking for a passphrase (e.g. key is not encrypted or already in agent)
-              # This is less likely if we expect a passphrase prompt
-              puts "ssh-add finished without passphrase prompt (is key unencrypted or already added?)."
+              # This means ssh-add exited without explicitly matching "Enter passphrase..." or "Identity added..."
+              # This could happen if the key is unencrypted and added silently, or if it failed before prompting.
+              puts "EXPECT_DEBUG: ssh-add reached eof without specific prompts (check ssh-add -l next)."
             }
             timeout {
-              puts "Timeout waiting for initial passphrase prompt or eof."
+              puts "ERROR_EXPECT: Timeout waiting for initial ssh-add prompt (e.g., 'Enter passphrase' or 'Identity added' or eof)."
               exit 1
             }
           }
           EOF
           )
 
-          echo "$EXPECT_SCRIPT" | expect -d # Run expect with debug output
+          # Run expect with its own debugging output (-d) and the script
+          echo "$EXPECT_SCRIPT" | expect -d
 
           echo "Verifying if key was added to agent..."
           ssh-add -l
           if [ $? -ne 0 ]; then
-            echo "ssh-add -l reported an error or no identities. Key not added successfully."
-            # Optionally, try to cat the key again here if debugging permissions or content
+            echo "ERROR: 'ssh-add -l' reported an error or no identities. Key not added successfully to agent."
+            # Optionally, for extreme debugging, cat the key file again to ensure it's what you think it is.
             # echo "Content of key file that failed to load:"
             # cat "$KEY_FILE_PATH" # SENSITIVE - REMOVE AFTER DEBUGGING
             exit 1
           else
-            echo "Key successfully added to agent."
+            echo "SUCCESS: Key successfully added to agent and verified with ssh-add -l."
           fi
+
       - name: Create known_hosts file
         env:
           KNOWN_HOSTS_CONTENT: ${{ secrets.IFASTNET_KNOWN_HOSTS }}
