--- a/spiro/manifest.json
+++ b/spiro/manifest.json
@@ -8,13 +8,13 @@
   "theme_color": "#1A1A2E",
   "icons": [
     {
-      "src": "./icons/192x192.png",
+      "src": "./icons/s192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "./icons/512x512.png",
+      "src": "./icons/s512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
