--- a/nfo/manifest.json
+++ b/nfo/manifest.json
@@ -4,8 +4,8 @@
     "description": "Collect info to read when you are offline.",
     "start_url": "/index.html",
     "display": "standalone",
-    "background_color": "#F0F0F0",
-    "theme_color": "#4A90E2",
+    "background_color": "#121212",
+    "theme_color": "#03DAC5",
     "icons": [
         {
             "src": "icons/i192.png",
