Info2Go v.1 Prerelease.2

--- a/nfo/manifest.json
+++ b/nfo/manifest.json
@@ -2,7 +2,8 @@
     "name": "Info2Go v.1",
     "short_name": "Info2Go",
     "description": "Collect info to read when you are offline.",
-    "start_url": "/index.html",
+    "start_url": "./index.html",
+    "scope": "/nfo/",
     "display": "standalone",
     "background_color": "#121212",
     "theme_color": "#03DAC5",
