--- a/nfo/manifest.json
+++ b/nfo/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Info2Go v.1",
-    "short_name": "Info2Go",
+    "name": "nfo2Go v.1",
+    "short_name": "nfo2Go",
     "description": "Collect info to read when you are offline.",
     "start_url": "./index.html",
     "scope": "/nfo/",
