--- a/habit/manifest.json
+++ b/habit/manifest.json
@@ -2,7 +2,8 @@
   "name": "Habit Tracker",
   "short_name": "Habits",
   "description": "Track your daily habits and build streaks",
-  "start_url": "/",
+  "start_url": ".",
+  "scope": ".",
   "display": "standalone",
   "background_color": "#121212",
   "theme_color": "#4CAF50",
