--- a/habit/manifest.json
+++ b/habit/manifest.json
@@ -14,6 +14,12 @@
       "type": "image/png"
     },
     {
+      "src": "icons/192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
       "src": "icons/256.png",
       "sizes": "256x256",
       "type": "image/png"
@@ -21,7 +27,14 @@
     {
       "src": "icons/512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icons/512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
