Enhance Game of Life application with update notifications and pattern management
- Added functionality to track the last selected pattern for dropdown persistence, allowing users to reload the same pattern easily.
- Implemented a service worker with update handling, notifying users of available updates through a notification system.
- Improved caching strategy in the service worker to ensure efficient resource management and update checks.
- Updated manifest version for better version control.

--- a/gol/manifest.json
+++ b/gol/manifest.json
@@ -6,6 +6,7 @@
   "orientation": "portrait-primary",
   "background_color": "#1f2937",
   "theme_color": "#121212",
+  "version": "101325.2",
   "icons": [
     {
       "src": "./icons/192x192.png",
