--- a/forecast/manifest.json
+++ b/forecast/manifest.json
@@ -10,7 +10,7 @@
   "orientation": "any",
   "icons": [
     {
-      "src": "icons/dark-icon-192",
+      "src": "icons/dark-icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
