--- a/trimps/manifest.json
+++ b/trimps/manifest.json
@@ -1,14 +1,1 @@
-{
-  "name": "Trimps",
-  "short_name": "Trimps",
-  "start_url": "./",
-  "display": "standalone",
-  "scope": "./",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "type": "image/x-icon",
-      "sizes": "any"
-    }
-  ]
-}
+{"name":"Trimps","short_name":"Trimps","start_url":"./","display":"standalone","scope":"./","icons":[{"src":"favicon.ico","type":"image/x-icon","sizes":"any"}]}
