Fix encoding issues in HTML, manifest, and service worker files
- Updated index.html, manifest.json, and sw.js to ensure proper encoding by removing invisible characters.
- Ensured consistency in file formatting to prevent potential rendering issues in browsers.

--- a/trimps/manifest.json
+++ b/trimps/manifest.json
@@ -1,1 +1,1 @@
-{"name":"Trimps","short_name":"Trimps","start_url":"./","display":"standalone","scope":"./","icons":[{"src":"favicon.ico","type":"image/x-icon","sizes":"any"}]}
+﻿{"name":"Trimps","short_name":"Trimps","start_url":"./","display":"standalone","scope":"./","icons":[{"src":"favicon.ico","type":"image/x-icon","sizes":"any"}]}
